--- a/app/views/pages/org_four.html.erb
+++ b/app/views/pages/org_four.html.erb
@@ -31,8 +31,11 @@
     </div>
 
 
-
-      <div style="height: 60px; padding-top: 5px; padding-left: 15px; width: 100%; color:white; font-family: 'Roboto', sans-serif; font-size: 30px; font-weight: 900; letter-spacing: 3px; text-align:left">PP</div>
+<div style="height: 60px; padding-top: 20px; padding-left: 15px; width: 100%; color:white; font-family: 'Roboto', sans-serif; font-size: 20px; font-weight: 300; letter-spacing: 3px; text-align:left">Pasa Pag-asa 2015
+        <span style="float:right;"><img src="/assets/insta.png" height="30" style="padding-right:30px;" /></span>
+        <span style="float:right;"><img src="/assets/twitter.png" height="30" /></span>
+        <span style="float:right;"><img src="/assets/fb.png" height="30" /></span>
+      </div>
 
     </div>
   </center>
